[package]
name = "frame-tick"
version = "0.1.6"
edition = "2024"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
description = "Tick-based, quasi-fixed-point time measurement for working with frames/animation/video"
keywords = ["time", "ticks", "animation", "precise", "fixed-point"]
categories = ["game-development", "graphics", "multimedia::video", "no-std"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
readme = "README.md"
documentation = "https://docs.rs/frame-tick/"
repository = "https://github.com/virtualritz/frame-tick/"

[dependencies]
document-features = "0.2"
facet = { version = ">=0.34", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["serde_derive"] }
typed_floats = { version = "1", optional = true, default-features = false }

[features]
## Add support for reflection via [`facet`](https://docs.rs/facet/).
facet = ["dep:facet"]
## Add support for non-integer frame rates. This pulls in the [`typed_floats`](https://docs.rs/typed_floats/) crate.
float_frame_rate = ["dep:typed_floats"]
## [`TICKS_PER_SECOND`] will be `25_600`. Which is just fine if you do not need to work with NTSC frame rates.
low_res = []
## Add support for serialization via `serde`.
serde = ["dep:serde", "typed_floats/serde"]
## Use `std`; this implements `Display` as well as `From<Tick>`/`Into<Tick>` for [`std::time::Duration`].
std = []

[package.metadata.docs.rs]
features = ["facet", "float_frame_rate", "serde", "std"]
